# GoogleTestWithNDK

./: README.md
app/: build.gradle
app/src/androidTest/java/com/codechacha/androidndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  foo_unittest.cpp  native-lib.cpp
app/src/main/java/com/codechacha/androidndk/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/codechacha/androidndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
